@@ -28,7 +28,6 @@ CommunityName's, not explicitly configured to local SNMP Engine.
 from pysnmp.entity import engine, config
 from pysnmp.carrier.asyncore.dgram import udp
 from pysnmp.entity.rfc3413 import ntfrcv
-from pysnmp.proto.api import v2c
 import re
 
 # Create SNMP engine with autogenernated engineID and pre-bound
